# RenderTest

./: README.md
OpenGLTesting/: CMakeLists.txt
OpenGLTesting/ingredients/: CMakeLists.txt  objmesh.h  scene.h  scenerunner.h  teapotpatch.cpp
OpenGLTesting/renderTest/: CMakeLists.txt  main.cpp  noisetex.cpp  scenerust.cpp
OpenGLTesting/renderTest/shader/: skybox.frag.glsl  skybox.vert.glsl
